--- a/src/app/libs/compose-ui/loading/loading.css
+++ b/src/app/libs/compose-ui/loading/loading.css
@@ -3,8 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.60);
+    height: calc(100vh - 98px);
     z-index: 9999;
     box-sizing: border-box;
     display: flex;
