--- a/src/app/features/user/barcode/barcode.component.html
+++ b/src/app/features/user/barcode/barcode.component.html
@@ -1,1 +1,19 @@
-<p>barcode works!</p>
+@if(isLoading()) {
+    <div class="loading-wrapper">
+        <ng-lottie [options]="lottieSearch" width="200px" />
+        <p>Loading...</p>
+    </div>
+} @else if (isError()) {
+    <div>Error: {{ errorMessage() }}</div>
+} @else if (isErrorInitialData()) {
+    <div class="no-initialData-wrapper">
+        <ng-lottie [options]="lottieError" width="200px" />
+        <p>Para dárte un análisis personalizado y detallado sobre el producto escaneado, debes tener ciertos datos iniciales (composición corporal). ¿Deseas añadirlos ahora?</p>
+        <div class="buttons">
+            <button mat-flat-button color="warn" (click)="setInitialBodyComposition()" class="mr10">Sí, hagámoslo.</button>
+            <button mat-raised-button (click)="isErrorInitialData.set(false)">No, gracias.</button>
+        </div>
+    </div>
+} @else {
+    <div>Product Info: <pre>{{ productInfo() | json }}</pre></div>
+}
