--- a/src/app/shared/dialogs/initial-body-composition/initial-body-composition.component.css
+++ b/src/app/shared/dialogs/initial-body-composition/initial-body-composition.component.css
@@ -1,3 +1,9 @@
 .ibc-dialog-wrapper {
-    padding: 16px;
+    padding: 32px;
+}
+.step-buttons-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    gap: 24px;
+    margin-top: 16px;
 }
