--- a/src/app/features/user/user.component.html
+++ b/src/app/features/user/user.component.html
@@ -9,7 +9,7 @@
     <span class="toolbar-item ml8">GC App</span>
     <span class="spacer"></span>
     <button mat-icon-button>
-        <mat-icon class="toolbar-item">notifications</mat-icon>
+        <mat-icon class="toolbar-item" matBadge="5" matBadgePosition="after" matBadgeSize="small">notifications</mat-icon>
     </button>
     <button mat-icon-button>
         <mat-icon class="toolbar-item">account_circle</mat-icon>
