--- a/src/app/features/user/dashboard/dashboard.component.html
+++ b/src/app/features/user/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<gc-user-progress-tracker />
 @if (!userHasInitialData()) {
     @defer(when !userHasInitialData()) {
         <mat-card appearance="outlined">
