--- a/src/app/features/auth/authenticate/sign-in/sign-in.css
+++ b/src/app/features/auth/authenticate/sign-in/sign-in.css
@@ -3,7 +3,8 @@
     flex-direction: row;
     width: 900px;
     height: 300px;
-    padding: 0px 16px;
+    padding: 0px 32px;
+    padding-bottom: 16px;
     box-sizing: border-box;
 }
 
@@ -63,9 +64,59 @@
     justify-content: end;
 }
 .mr8 { margin-right: 8px; }
+.spacer { flex: 1 1 auto; }
 .auth-next-btn { background-color: #850000 !important; margin-left: 16px; }
 .auth-text-general { color: #000 !important; }
 
+/*
+    Auth Footer
+*/
+.auth-footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    margin-top: 8px;
+    box-sizing: border-box;
+}
+.select-dropdown {
+    background-color: white;
+    border-radius: 8px;
+    margin: 0 auto;
+}
+.select-dropdown select {
+    color: black;
+    padding: 8px;
+    border: none;
+    background-color: transparent;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
+}
+.select-dropdown select:active, .select-dropdown select:focus {
+    outline: none;
+    box-shadow: none;
+}
+.select-dropdown:after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    margin-top: -2px;
+    right: 8px;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid white;
+}
+.select-dropdown option{
+    background: white;
+    color: black;
+    width: 100%;
+}/* End Auth Footer */
+
+/* Media Queries */
 @media (max-width: 1024px) {
     auth-card {
         width: 100%;
