--- a/src/app/features/user/dashboard/dashboard.component.css
+++ b/src/app/features/user/dashboard/dashboard.component.css
@@ -13,3 +13,25 @@
     color: red;
 }
 
+.progress-container {
+    width: 100%;
+    margin: 20px 0;
+}
+  
+.progress-bar {
+    background-color: #f3f3f3;
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 30px;
+}
+  
+.progress {
+    background-color: #4caf50;
+    height: 100%;
+    line-height: 30px;
+    color: white;
+    text-align: center;
+}
+
