--- a/src/app/shared/dialogs/initial-body-composition/initial-body-composition.component.html
+++ b/src/app/shared/dialogs/initial-body-composition/initial-body-composition.component.html
@@ -2,12 +2,13 @@
 <section class="ibc-dialog-wrapper">
     <form [formGroup]="initialBodyCompForm" (ngSubmit)="saveInitialBodyCompData()">
         @if(formStep() === 1) {
-            <h4>¿Cuál es tu edad?</h4>
+            <h4>¿Cuál es tu fecha de nacimiento?</h4>
             <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
-                <mat-label>Edad</mat-label>
-                <input matInput type="number" formControlName="age">
-                <mat-icon matPrefix>sentiment_very_satisfied</mat-icon>
-                @if (initialBodyCompForm.get('age')?.hasError('required')) {
+                <mat-label>Fecha de nacimiento</mat-label>
+                <input matInput [max]="maxDate" [matDatepicker]="picker" (dateInput)="addEvent($event)" formControlName="birthday" />
+                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker touchUi #picker></mat-datepicker>
+                @if (initialBodyCompForm.get('birthday')?.hasError('required')) {
                     <mat-error>Este campo es requerido</mat-error>
                 }
                 @if (initialBodyCompForm.get('age')?.hasError('min')) {
@@ -20,7 +21,7 @@
         }
         @if (formStep() === 2) {
             <h4>¿Cuál es tu peso actual?</h4>
-            <mat-form-field appearance="outline" gcFullWidth>
+            <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
                 <mat-label>Peso</mat-label>
                 <input matInput type="number" formControlName="weight">
                 <mat-icon matPrefix>monitor_weight</mat-icon>
@@ -32,7 +33,7 @@
         }
         @if (formStep() === 3) {
             <h4>¿Cuál es tu estatura?</h4>
-            <mat-form-field appearance="outline" gcFullWidth>
+            <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
                 <mat-label>Estatura</mat-label>
                 <input matInput type="number" formControlName="height">
                 <mat-icon matPrefix>height</mat-icon>
@@ -43,8 +44,42 @@
             </div>
         }
         @if (formStep() === 4) {
+            <h4>¿Cuál es tu porcentaje de masa grasa y masa muscular?</h4>
+            <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
+                <mat-label>Masa Grasa</mat-label>
+                <input matInput type="number" placeholder="en porcentaje" formControlName="bodyFat">
+                <mat-icon matPrefix materialOutlined>body_fat</mat-icon>
+            </mat-form-field>
+            <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 20px">
+                <mat-label>Masa Muscular</mat-label>
+                <input matInput type="number" placeholder="en porcentaje" formControlName="muscleMass">
+                <mat-icon matPrefix materialOutlined>exercise</mat-icon>
+            </mat-form-field>
+            <div class="step-buttons-wrapper">
+                <button mat-raised-button type="button" (click)="onPreviousStep()">Anterior</button>
+                <button mat-flat-button type="button" (click)="onNextStep()" primaryColor>Siguiente</button>
+            </div>
+        }
+        @if (formStep() === 4) {
+            <h4>¿Cuál es tu grasa visceral?</h4>
+            <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
+                <mat-label>Masa Grasa</mat-label>
+                <input matInput type="number" placeholder="en porcentaje" formControlName="bodyFat">
+                <mat-icon matPrefix materialOutlined>body_fat</mat-icon>
+            </mat-form-field>
+            <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 20px">
+                <mat-label>Masa Muscular</mat-label>
+                <input matInput type="number" placeholder="en porcentaje" formControlName="muscleMass">
+                <mat-icon matPrefix materialOutlined>exercise</mat-icon>
+            </mat-form-field>
+            <div class="step-buttons-wrapper">
+                <button mat-raised-button type="button" (click)="onPreviousStep()">Anterior</button>
+                <button mat-flat-button type="button" (click)="onNextStep()" primaryColor>Siguiente</button>
+            </div>
+        }
+        @if (formStep() === 5) {
             <h4>¿Cuál es tu objetivo?</h4>
-            <mat-form-field appearance="outline" gcFullWidth>
+            <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
                 <mat-label>Objetivo</mat-label>
                 <mat-select name="objective" formControlName="goal">
                     @for (objectives of patientObjectives; track objectives) {
@@ -58,26 +93,26 @@
                 <button mat-flat-button type="button" (click)="onNextStep()" primaryColor>Siguiente</button>
             </div>
         }
-        @if (formStep() === 5) {
+        @if (formStep() === 6) {
             <h4>¿Qué nivel de actividad física tienes?</h4>
-            <mat-form-field appearance="outline" gcFullWidth>
+            <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
                 <mat-label>Actividad Física</mat-label>
                 <mat-select name="activity" formControlName="physicalActivity">
                     @for (activity of patientPhysicalActivities; track activity) {
                         <mat-option [value]="activity.value">{{activity.name}}</mat-option>
                     }
                 </mat-select>
-                <mat-icon matPrefix materialOutlined>target</mat-icon>
+                <mat-icon matPrefix materialOutlined>fitness_center</mat-icon>
             </mat-form-field>
             <div class="step-buttons-wrapper">
                 <button mat-raised-button type="button" (click)="onPreviousStep()">Anterior</button>
                 <button mat-flat-button type="button" (click)="onNextStep()" primaryColor>Siguiente</button>
             </div>
-            
+                                                                                                       
         }
-        @if (formStep() === 6) {
+        @if (formStep() === 7) {
             <h4>¿Tienes alergías alimentarias?</h4>
-            <mat-slide-toggle formControlName="hasAllergies" (change)="hasAllergies = $event.checked">
+            <mat-slide-toggle formControlName="hasAllergies" gcMargin="top, 12px" (change)="hasAllergies = $event.checked">
                 @if (initialBodyCompForm.get('hasAllergies')!.value) { 
                     <span gcMargin="left, 8px">Sí</span> 
                 } @else { 
