--- a/src/app/shared/sheets/body-composition-sheet/body-composition-sheet.component.css
+++ b/src/app/shared/sheets/body-composition-sheet/body-composition-sheet.component.css
@@ -1,1 +1,9 @@
-.fullWidth { width: 100%; }
+.bcSheet-wrapper {
+    padding: 16px;
+}
+
+.twoInput-wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+}
