--- a/src/app/features/user/barcode/barcode.component.html
+++ b/src/app/features/user/barcode/barcode.component.html
@@ -10,7 +10,7 @@
         <ng-lottie [options]="lottieError" width="200px" />
         <p>Para dárte un análisis personalizado y detallado sobre el producto escaneado, debes tener ciertos datos iniciales (composición corporal). ¿Deseas añadirlos ahora?</p>
         <div class="buttons">
-            <button mat-flat-button color="warn" (click)="setInitialBodyComposition()" class="mr10">Sí, hagámoslo.</button>
+            <button mat-flat-button color="warn" class="mr10">Sí, hagámoslo.</button>
             <button mat-raised-button (click)="isErrorInitialData.set(false)">No, gracias.</button>
         </div>
     </div>
