--- a/src/app/features/user/user.component.html
+++ b/src/app/features/user/user.component.html
@@ -1,61 +1,56 @@
 <mat-toolbar class="user-toolbar">
-    <button mat-icon-button (click)="drawer.toggle()">
-      @if(drawer.opened) {
-        <mat-icon class="toolbar-item">close</mat-icon>
-      } @else {
-        <mat-icon class="toolbar-item">menu</mat-icon>
-      }
+  <button mat-icon-button (click)="drawer.toggle()">
+    @if(drawer.opened) {
+      <mat-icon class="toolbar-item">close</mat-icon>
+    } @else {
+      <mat-icon class="toolbar-item">menu</mat-icon>
+    }
+  </button>
+  <span class="toolbar-item ml8">GC App</span>
+  <span class="spacer"></span>
+  <button mat-icon-button>
+    <mat-icon class="toolbar-item" matBadge="5" matBadgePosition="after" matBadgeSize="small">notifications</mat-icon>
+  </button>
+  <button mat-icon-button [matMenuTriggerFor]="userMenu">
+    <mat-icon class="toolbar-item">account_circle</mat-icon>
+  </button>
+  <mat-menu #userMenu="matMenu">
+    <button mat-menu-item>
+      <mat-icon>face</mat-icon>
+      <span>Profile</span>
     </button>
-    <span class="toolbar-item ml8">GC App</span>
-    <span class="spacer"></span>
-    <button mat-icon-button>
-        <mat-icon class="toolbar-item" matBadge="5" matBadgePosition="after" matBadgeSize="small">notifications</mat-icon>
+    <button mat-menu-item (click)="userSignOut()">
+      <mat-icon>logout</mat-icon>
+      <span>Sign Out</span>
     </button>
-    <button mat-icon-button>
-        <mat-icon class="toolbar-item">account_circle</mat-icon>
-    </button>
-    <button mat-icon-button>
-        <mat-icon class="toolbar-item">more_vert</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-        <button mat-menu-item>
-          <mat-icon>dialpad</mat-icon>
-          <span>Redial</span>
-        </button>
-        <button mat-menu-item disabled>
-          <mat-icon>voicemail</mat-icon>
-          <span>Check voice mail</span>
-        </button>
-        <button mat-menu-item>
-          <mat-icon>notifications_off</mat-icon>
-          <span>Disable alerts</span>
-        </button>
-      </mat-menu>
+  </mat-menu>
+  <button mat-icon-button>
+    <mat-icon class="toolbar-item">more_vert</mat-icon>
+  </button>
 </mat-toolbar>
 <!-- Mat Drawer -->
 <mat-drawer-container class="user-drawer-container" autosize>
-    <mat-drawer #drawer class="user-sidenav" mode="side" [opened]="(navbarOpened$ | async)">
-        <mat-nav-list>
-            @for (link of navLinks; track link) {
-                <a mat-list-item [routerLink]="link.route" routerLinkActive="active-link" class="mt10" (click)="closeIfMobile()">
-                    <mat-icon matListItemIcon class="material-symbols-outlined">
-                        {{ link.icon }}
-                    </mat-icon>
-                    <span matListItemTitle>{{ link.name }}</span>
-                </a>
-            }
-        </mat-nav-list>
-    </mat-drawer>
+  <mat-drawer #drawer class="user-sidenav" mode="side" [opened]="(navbarOpened$ | async)">
+    <mat-nav-list>
+      @for (link of navLinks; track link) {
+        <a mat-list-item [routerLink]="link.route" routerLinkActive="active-link" class="mt10" (click)="closeIfMobile()">
+          <mat-icon matListItemIcon class="material-symbols-outlined">
+            {{ link.icon }}
+          </mat-icon>
+          <span matListItemTitle>{{ link.name }}</span>
+        </a>
+      }
+    </mat-nav-list>
+  </mat-drawer>
   
-    <div class="user-drawer-content">
-      <router-outlet></router-outlet>
-    </div>
-  
-  </mat-drawer-container>  
+  <div class="user-drawer-content">
+    <router-outlet></router-outlet>
+  </div>
+</mat-drawer-container>  
 <!-- ./End Mat Drawer -->
 <!-- Fab Button -->
 <button mat-fab class="user-fab" [matMenuTriggerFor]="fabMenu">
-    <mat-icon>add</mat-icon>
+  <mat-icon>add</mat-icon>
 </button> <!-- ./End Fab Button -->
 <!-- Fab Menu -->
 <mat-menu #fabMenu="matMenu">
