--- a/src/app/shared/dialogs/initial-body-composition/initial-body-composition.component.html
+++ b/src/app/shared/dialogs/initial-body-composition/initial-body-composition.component.html
@@ -23,7 +23,7 @@
             <h4>¿Cuál es tu peso actual?</h4>
             <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
                 <mat-label>Peso</mat-label>
-                <input matInput type="number" formControlName="weight">
+                <input matInput type="number" placeholder="en kilogramos" formControlName="weight">
                 <mat-icon matPrefix>monitor_weight</mat-icon>
             </mat-form-field>
             <div class="step-buttons-wrapper">
@@ -35,7 +35,7 @@
             <h4>¿Cuál es tu estatura?</h4>
             <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
                 <mat-label>Estatura</mat-label>
-                <input matInput type="number" formControlName="height">
+                <input matInput type="number" placeholder="en centimetros" formControlName="height">
                 <mat-icon matPrefix>height</mat-icon>
             </mat-form-field>
             <div class="step-buttons-wrapper">
@@ -60,24 +60,19 @@
                 <button mat-flat-button type="button" (click)="onNextStep()" primaryColor>Siguiente</button>
             </div>
         }
-        @if (formStep() === 4) {
+        @if (formStep() === 5) {
             <h4>¿Cuál es tu grasa visceral?</h4>
             <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
-                <mat-label>Masa Grasa</mat-label>
-                <input matInput type="number" placeholder="en porcentaje" formControlName="bodyFat">
+                <mat-label>Grasa Visceral</mat-label>
+                <input matInput type="number" formControlName="visceralFat">
                 <mat-icon matPrefix materialOutlined>body_fat</mat-icon>
-            </mat-form-field>
-            <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 20px">
-                <mat-label>Masa Muscular</mat-label>
-                <input matInput type="number" placeholder="en porcentaje" formControlName="muscleMass">
-                <mat-icon matPrefix materialOutlined>exercise</mat-icon>
             </mat-form-field>
             <div class="step-buttons-wrapper">
                 <button mat-raised-button type="button" (click)="onPreviousStep()">Anterior</button>
                 <button mat-flat-button type="button" (click)="onNextStep()" primaryColor>Siguiente</button>
             </div>
         }
-        @if (formStep() === 5) {
+        @if (formStep() === 6) {
             <h4>¿Cuál es tu objetivo?</h4>
             <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
                 <mat-label>Objetivo</mat-label>
@@ -93,7 +88,7 @@
                 <button mat-flat-button type="button" (click)="onNextStep()" primaryColor>Siguiente</button>
             </div>
         }
-        @if (formStep() === 6) {
+        @if (formStep() === 7) {
             <h4>¿Qué nivel de actividad física tienes?</h4>
             <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
                 <mat-label>Actividad Física</mat-label>
@@ -110,7 +105,32 @@
             </div>
                                                                                                        
         }
-        @if (formStep() === 7) {
+        @if (formStep() === 8) {
+            <h4>¿Cuáles son las actividades que realizas?</h4>
+            <button mat-raised-button type="button" (click)="addActivity()">
+                Agregar actividad
+            </button>
+            <ng-container formArrayName="activities">
+                @for (activity of activities.controls; track activity; let i = $index) {
+                    <div [formGroupName]="i" class="activity-wrapper">
+                        <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
+                            <mat-label>Actividad</mat-label>
+                            <input matInput type="text" formControlName="name">
+                            <mat-icon matPrefix materialOutlined>directions_walk</mat-icon>
+                        </mat-form-field>
+                        <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px" style="flex: 45%">
+                            <mat-label>Duración</mat-label>
+                            <input matInput type="number" formControlName="duration">
+                        </mat-form-field>
+                    </div>
+                }
+            </ng-container>
+            <div class="step-buttons-wrapper">
+                <button mat-raised-button type="button" (click)="onPreviousStep()">Anterior</button>
+                <button mat-flat-button type="button" (click)="onNextStep()" primaryColor>Siguiente</button>
+            </div>                                                                            
+        }
+        @if (formStep() === 9) {
             <h4>¿Tienes alergías alimentarias?</h4>
             <mat-slide-toggle formControlName="hasAllergies" gcMargin="top, 12px" (change)="hasAllergies = $event.checked">
                 @if (initialBodyCompForm.get('hasAllergies')!.value) { 
