--- a/src/app/features/user/user.component.html
+++ b/src/app/features/user/user.component.html
@@ -8,6 +8,8 @@
   </button>
   <span class="toolbar-item ml8">GC App</span>
   <span class="spacer"></span>
+  <!-- Quests Feature -->
+  <gc-quests-appbar />
   <button mat-icon-button>
     <mat-icon class="toolbar-item" matBadge="5" matBadgePosition="after" matBadgeSize="small">notifications</mat-icon>
   </button>
