--- a/src/app/shared/dialogs/initial-body-composition/initial-body-composition.component.css
+++ b/src/app/shared/dialogs/initial-body-composition/initial-body-composition.component.css
@@ -11,16 +11,21 @@
     font-size: 11px;
     font-style: italic;
 }
-
-.m10 {
-    margin-top: 24px;
-}
 .activity-container {
-    display: flex;
-    flex-direction: column;
+    max-height: 250px;
+    overflow: scroll;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 .activity-wrapper {
     display: flex;
+    flex-direction: column;
+    gap: 16px;
+    box-sizing: border-box;
+}
+.fieldset-wrapper {
+    display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 8px;
+    box-sizing: border-box;
 }
