--- a/src/app/shared/dialogs/initial-body-composition/initial-body-composition.component.html
+++ b/src/app/shared/dialogs/initial-body-composition/initial-body-composition.component.html
@@ -1,4 +1,6 @@
-<Loading [activated]="isLoading()" [loader]="'basic'" />
+@if (isLoading()) {
+    <Loading [loader]="'basic'" />
+}
 <section class="ibc-dialog-wrapper">
     <form [formGroup]="initialBodyCompForm" (ngSubmit)="saveInitialBodyCompData()">
         @if(formStep() === 1) {
@@ -107,23 +109,31 @@
         }
         @if (formStep() === 8) {
             <h4>¿Cuáles son las actividades que realizas?</h4>
-            <button mat-raised-button type="button" (click)="addActivity()">
+            <button mat-raised-button type="button" (click)="addActivity()" gcMargin="bottom, 12px">
                 Agregar actividad
             </button>
             <ng-container formArrayName="activities">
-                @for (activity of activities.controls; track activity; let i = $index) {
-                    <div [formGroupName]="i" class="activity-wrapper">
-                        <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
-                            <mat-label>Actividad</mat-label>
-                            <input matInput type="text" formControlName="name">
-                            <mat-icon matPrefix materialOutlined>directions_walk</mat-icon>
-                        </mat-form-field>
-                        <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px" style="flex: 45%">
-                            <mat-label>Duración</mat-label>
-                            <input matInput type="number" formControlName="duration">
-                        </mat-form-field>
-                    </div>
-                }
+                <div class="activity-container">
+                    @for (activity of activities.controls; track activity; let i = $index) {
+                        <div [formGroupName]="i" class="activity-wrapper">
+                            <fieldset class="fieldset-wrapper">
+                                <legend>Actividad {{ i + 1}}</legend>
+                                <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px">
+                                    <mat-label>Actividad</mat-label>
+                                    <input matInput type="text" formControlName="name">
+                                    <mat-icon matPrefix materialOutlined>directions_walk</mat-icon>
+                                </mat-form-field>
+                                <mat-form-field appearance="outline" gcFullWidth gcMargin="top, 12px" style="flex: 45%">
+                                    <mat-label>Duración</mat-label>
+                                    <input matInput type="number" formControlName="duration">
+                                </mat-form-field>
+                                <button mat-icon-button style="flex: 1 1 auto;">
+                                    <mat-icon>delete</mat-icon>
+                                </button>
+                            </fieldset>
+                        </div>
+                    }
+                </div>
             </ng-container>
             <div class="step-buttons-wrapper">
                 <button mat-raised-button type="button" (click)="onPreviousStep()">Anterior</button>
